# predb-irc-bot

./: .env  Cargo.toml  LICENSE  Readme.md
src/: database.rs  irc_client.rs  main.rs  message_parser.rs  utils.rs
